[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.21.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

